--- a/src/main/resources/templates/create_user.html
+++ b/src/main/resources/templates/create_user.html
@@ -22,7 +22,7 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/users}">пользователи</a>
+        <a class="nav-link" th:href="@{/getAllUsers}">пользователи</a>
       </li>
     </ul>
   </div>
@@ -34,7 +34,7 @@
     <div class ="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
       <h1 class = "text-center"> Введите данные пользователя </h1>
       <div class = "card-body">
-        <form th:action="@{/users}" th:object = "${user}" method="POST">
+        <form th:action="@{/saveUser}" th:object = "${user}" method="POST">
           <div class ="form-group">
             <label> Имя </label>
             <input
