--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -25,7 +25,7 @@
 
     <div class = "row">
         <div class = "col-lg-3">
-            <a th:href = "@{/users/new}" class = "btn btn-primary btn-sm mb-3"> Добавить пользователя</a>
+            <a th:href = "@{/newUser}" class = "btn btn-primary btn-sm mb-3"> Добавить пользователя</a>
         </div>
     </div>
     <table class = "table table-striped table-bordered">
@@ -49,7 +49,7 @@
             <td th:text = "${user.dateBDay}"></td>
 
             <td>
-                <a th:href = "@{/user/get/{id}(id=${user.id})}"
+                <a th:href = "@{/getUser{id}(id=${user.id})}"
                    class = "btn btn-primary">Подробнее</a>
             </td>
         </tr>
